# Qt-GuitarPedal

./: .gitignore  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Main.qml  PedalController.cpp  PedalController.h  README.md  main.cpp  resources.qrc
